fixed external networks on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             MYSQL_USER: 'qrassh'
             MYSQL_PASSWORD: 'qrassh'
             MYSQL_ROOT_PASSWORD: 'qrassh'
+        networks:
+            - backend
         ports:
             - "3306:3306"
         volumes:
@@ -19,9 +21,10 @@ services:
             context: .
             dockerfile: Dockerfile
         networks:
-            - internet
+            - frontend
+            - backend
         ports:
-            - "22:22"
+                - "0.0.0.0:22:2222"
         depends_on: 
             - mysql
 
@@ -29,5 +32,7 @@ volumes:
     mysql_volume:
 
 networks:
-    internet:
-        external: true
+    frontend:
+        internal: false
+    backend:
+        internal: true
